syntax = "proto3";

package file;

option go_package = "github.com/andibalo/ramein/commons/pb/corvus/v1";
option java_multiple_files = true;
option java_package = "api.file.v1";

service File {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileRequest {
  string file_name = 1;
  string file_path = 2;
  string bucket = 3;
  bytes file = 4;
}

message UploadFileResponse {
  string status = 5;
  string file_name = 1;
  string file_path = 2;
  string bucket = 3;
  string message = 4;
}